[package]
name = "verify"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
k256 = { version = "0.13.1", default-features = false }
revm = { version = "3.5.0", default-features = false }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex-literal = "0.4.1"
sha2 = { version = "0.10.8", default-features = false }
sha3 = { version = "0.10.8", default-features = false }
